examples/typechecking/error_kinds.an
// Specialize error messages to different expr kinds
assignment (_: Unit) : Unit =
    var x = 1i32
    x := "s"

condition (b: I32) : Unit =
    if b then ()

loop_body (b: Bool) (x: I32) : Unit =
    while b do x

array_element (s: String) : Unit =
    _arr = [1i32, s]
    ()

callee (x: I32) : Unit =
    _y = x ()
    ()

returned (x: I32) : I32 =
    if x == 0 then return "s"
    x

s = "str"
function_body (_: Unit) : I32 = s

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/error_kinds.an:4:10
// 3 |     var x = 1i32
// 4 |     x := "s"	// error: Cannot assign a value of type String to a target of type I32
//   |          ^^^
// 
// examples/typechecking/error_kinds.an:7:8
// 6 | condition (b: I32) : Unit =
// 7 |     if b then ()	// error: Conditions must have type Bool but this condition has type I32
//   |        ^
// 
// examples/typechecking/error_kinds.an:10:16
//  9 | loop_body (b: Bool) (x: I32) : Unit =
// 10 |     while b do x	// error: Loop bodies must have type Unit but this body has type I32
//    |                ^
// 
// examples/typechecking/error_kinds.an:13:19
// 12 | array_element (s: String) : Unit =
// 13 |     _arr = [1i32, s]	// error: This array element has type String but I32 was expected
//    |                   ^
// 14 |     ()
// 
// examples/typechecking/error_kinds.an:17:10
// 16 | callee (x: I32) : Unit =
// 17 |     _y = x ()	// error: This is called as if it were a fn _ => _ but it has type I32
//    |          ^
// 18 |     ()
// 
// examples/typechecking/error_kinds.an:21:27
// 20 | returned (x: I32) : I32 =
//    |     // error: This returns a value of type String but the enclosing function returns I32
// 21 |     if x == 0 then return "s"
//    |                           ^^^
// 22 |     x
// 
// examples/typechecking/error_kinds.an:25:33
// 24 | s = "str"
//    | // error: The body of this function has type String but it is expected to return I32
// 25 | function_body (_: Unit) : I32 = s
//    |                                 ^
// 
// Found 7 errors and 0 warnings

